# chess-experiment-ghcopilot-opus4.8

./: README.md  _compat.py  app.json  build_video.py  config_loader.py  fetch_puzzle.py  lichess_local_mvp_implementation_plan.md  logging_utils.py  main.py  metadata.py  puzzle_model.py  pyproject.toml  render_board.py  state_manager.py
.github/ibootstrap/: ssue_1.md
fixtures/: daily_puzzle_sample.json
src/: __init__.py
src/_vendor/: __init__.py  chess_fallback.py
tests/: test_puzzle_model.py
