[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-puzzle-video"
version = "0.1.0"
description = "Local-first daily Lichess puzzle video pipeline (Milestone 1)"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "chess>=1.10",
    "Pillow>=10.0",
    "cairosvg>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
packages = ["src"]
